Final app version with logo and config fixes

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>story-app</title>
+
+    <!-- Viewport for Mobile -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+
+    <!-- Title and Favicon -->
+    <title>AI Tales | Interactive Storytelling</title>
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- Open Graph / Social Media Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="AI Tales" />
+    <meta
+      property="og:description"
+      content="A dynamic AI storytelling engine. Your choices shape the narrative. Every playthrough is unique."
+    />
+
+    <!-- Replace this with your actual domain after deployment (e.g. [https://myapp.vercel.app/logo.png](https://myapp.vercel.app/logo.png)) -->
+    <meta property="og:image" content="/logo.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AI Tales" />
+    <meta
+      name="twitter:description"
+      content="Choose your genre and let AI weave a unique story for you."
+    />
+    <meta name="twitter:image" content="/logo.png" />
   </head>
   <body>
     <div id="root"></div>
