Update meta tags for social sharing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     />
 
     <!-- Replace this with your actual domain after deployment (e.g. [https://myapp.vercel.app/logo.png](https://myapp.vercel.app/logo.png)) -->
-    <meta property="og:image" content="/logo.png" />
+    <meta
+      property="og:image"
+      content="https://story-app-roan-nu.vercel.app/logo.png"
+    />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
